--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             id: 4,
             name: "Bakso Ikan Kuah Chili Oil",
             price: { Small: 5000, Large: 10000 },
-            img: "img/bakso-ikan-kuah.png",
+            img: "img/baksoikan.png",
             isSpicy: true,
             rating: 4.2,
           },
@@ -362,7 +362,7 @@
           {
             id: 28,
             name: "Coming Soon",
-            // img: "img/merch-coming-soon.png",
+            img: "img/coming-soon.png",
             comingSoon: true
           }
         ]
