Update image source and download link in plugin.html

--- a/plugin.html
+++ b/plugin.html
@@ -86,10 +86,10 @@
 
       <!-- CARD 1 -->
       <div class="card">
-        <img src="assets/img/plugin-1.png" alt="Plugin TheoTown">
+        <img src="img/plugin.jpg" alt="Plugin TheoTown">
         <div class="card-body">
           <h3>Ngaleueut Saung Plugin</h3>
-          <a href="assets/plugin/ngaleueut-plugin.zip" class="download-btn" download>
+          <a href="img/plugin.zip" class="download-btn" download>
             Download (.zip)
           </a>
         </div>
