--- a/plugin.html
+++ b/plugin.html
@@ -65,7 +65,7 @@
     .download-btn {
       text-align: center;
       padding: 10px;
-      background: #ff7a00;
+      background: green;
       color: #000;
       text-decoration: none;
       border-radius: 8px;
@@ -86,9 +86,9 @@
 
       <!-- CARD 1 -->
       <div class="card">
-        <img src="img/plugin.jpg" alt="Plugin TheoTown">
+        <img src="img/plugin.png" alt="Plugin TheoTown">
         <div class="card-body">
-          <h3>Ngaleueut Saung Plugin</h3>
+          <h3>Ngaleueut Plugin</h3>
           <a href="img/plugin.zip" class="download-btn" download>
             Download (.zip)
           </a>
